--- a/trunk/kaptan/po/es.po
+++ b/trunk/kaptan/po/es.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kaptan\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-11 14:32+0200\n"
+"POT-Creation-Date: 2006-12-11 14:46+0200\n"
 "PO-Revision-Date: 2006-11-28 19:46-0400\n"
 "Last-Translator: Klemens Häckel <click3d@linuxmail.org>\n"
 "Language-Team: spanish <es@li.org>\n"
@@ -32,11 +32,37 @@ msgstr ""
 msgid "&Test Wallpaper"
 msgstr "&Probar fondo"
 
+#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 133
+#: rc.cpp:72
+#, no-c-format
+msgid ""
+"<b>Package-manager</b> is the graphical front-end of <b>PiSi</b>. With "
+"package-manager you can easily install new programs and upgrade your system. "
+"But also can work in the system tray and periodically checks new upgrades of "
+"the programs that are installed on your system."
+msgstr ""
+
+#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
+#: rc.cpp:16
+#, fuzzy, no-c-format
+msgid ""
+"<b>Pardus </b>is a GNU/Linux distribution, targeting at computer literate "
+"users' basic desktop needs; with acquiring the strong ideas, architecture "
+"and code of other distributions; with a custom configuration framework which "
+"has the ability to evolve into an autonomous system; for simplifying the "
+"installation and usage of the computers."
+msgstr ""
+"Pardus es una distribución GNU/Linux, destinado para las necesidades basicos "
+"de escritorio; aprovechando ideas, architectura y código de otras "
+"distribuciones ; Con una herramienta adaptada de configuración que tiene la "
+"opciónde convertirse en un producto independiente; para la simplificación de "
+"la instalación y uso de las computadoras."
+
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 51
 #: rc.cpp:7
 #, no-c-format
 msgid ""
-"<center>You have finished!  Now you can start using Pardus Linux</center>"
+"<center>You have finished!  Now you can start using <b>Pardus</b></center>"
 msgstr ""
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 58
@@ -77,8 +103,8 @@ msgstr ""
 #: rc.cpp:78
 #, fuzzy, no-c-format
 msgid ""
-"Here, you can select a style for your desktop. Pardus provides some eye "
-"candy styles for you."
+"Here, you can select a <b>style </b>for your desktop. <b>Pardus</b> provides "
+"some eye candy styles for you."
 msgstr ""
 "Aqui puedes elegir una imagen para el fondo de tu escritorio. Pardus viene "
 "con fondos hermosos, puedes elegir a gusto :)."
@@ -87,19 +113,12 @@ msgstr ""
 #: rc.cpp:23
 #, fuzzy, no-c-format
 msgid ""
-"Here, you can select a wallpaper for your desktop background. Pardus "
-"provides eye candy wallpapers, you can select one of them, as you wish."
+"Here, you can select a <b>wallpaper</b> for your desktop background. "
+"<b>Pardus</b> provides eye candy wallpapers, you can select one of them, as "
+"you wish."
 msgstr ""
 "Aqui puedes elegir una imagen para el fondo de tu escritorio. Pardus viene "
 "con fondos hermosos, puedes elegir a gusto :)."
-
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 133
-#: rc.cpp:72
-#, no-c-format
-msgid ""
-"Here, you can select default behaviour of package-manager, software manager "
-"for Pardus."
-msgstr ""
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 27
 #: rc.cpp:39
@@ -143,22 +162,6 @@ msgstr ""
 #, no-c-format
 msgid "Package Manager"
 msgstr ""
-
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
-#: rc.cpp:16
-#, no-c-format
-msgid ""
-"Pardus is a GNU/Linux distribution, targeting at computer literate users' "
-"basic desktop needs; with acquiring the strong ideas, architecture and code "
-"of other distributions; with a custom configuration framework which has the "
-"ability to evolve into an autonomous system; for simplifying the "
-"installation and usage of the computers."
-msgstr ""
-"Pardus es una distribución GNU/Linux, destinado para las necesidades basicos "
-"de escritorio; aprovechando ideas, architectura y código de otras "
-"distribuciones ; Con una herramienta adaptada de configuración que tiene la "
-"opciónde convertirse en un producto independiente; para la simplificación de "
-"la instalación y uso de las computadoras."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 85
 #: rc.cpp:45
