--- a/trunk/kaptan/po/tr.po
+++ b/trunk/kaptan/po/tr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kaptan\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-11 14:32+0200\n"
+"POT-Creation-Date: 2006-12-11 14:46+0200\n"
 "PO-Revision-Date: 2005-03-05 23:03+0200\n"
 "Last-Translator: Zerrin Cakmakkaya <zerrin@uludag.org.tr>\n"
 "Language-Team: Türkçe <yerellestirme@kde.org.tr>\n"
@@ -29,13 +29,39 @@ msgstr "&Tek tıklama ile dosya ve dizinleri aç"
 msgid "&Test Wallpaper"
 msgstr "&Duvar Kâğıdını Dene"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 51
-#: rc.cpp:7
+#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 133
+#: rc.cpp:72
 #, no-c-format
 msgid ""
-"<center>You have finished!  Now you can start using Pardus Linux</center>"
+"<b>Package-manager</b> is the graphical front-end of <b>PiSi</b>. With "
+"package-manager you can easily install new programs and upgrade your system. "
+"But also can work in the system tray and periodically checks new upgrades of "
+"the programs that are installed on your system."
 msgstr ""
-"<center>Bitirdiniz! Pardus kullanmaya başlayabilirsiniz</center>"
+
+#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
+#: rc.cpp:16
+#, fuzzy, no-c-format
+msgid ""
+"<b>Pardus </b>is a GNU/Linux distribution, targeting at computer literate "
+"users' basic desktop needs; with acquiring the strong ideas, architecture "
+"and code of other distributions; with a custom configuration framework which "
+"has the ability to evolve into an autonomous system; for simplifying the "
+"installation and usage of the computers."
+msgstr ""
+"Pardus GNU/Linux dağıtımı, bilişim okur-yazarlığına sahip bilgisayar "
+"kullanıcılarının temel masaüstü ihtiyaçlarını hedefleyerek; mevcut Linux "
+"dağıtımlarının üstün taraflarını kavram, mimari ya da kod olarak kullanan; "
+"otonom sisteme evrilebilecek bir yapılandırma çerçevesi ve araçları ile "
+"kurulum, yapılandırma ve kullanım kolaylığı sağlamak üzere geliştirilen bir "
+"GNU/Linux dağıtımıdır. "
+
+#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 51
+#: rc.cpp:7
+#, fuzzy, no-c-format
+msgid ""
+"<center>You have finished!  Now you can start using <b>Pardus</b></center>"
+msgstr "<center>Bitirdiniz! Pardus kullanmaya başlayabilirsiniz</center>"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 58
 #: rc.cpp:42
@@ -73,32 +99,24 @@ msgstr "Ç&ift tıklama ile dosya ve dizinleri aç"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 27
 #: rc.cpp:78
-#, no-c-format
+#, fuzzy, no-c-format
 msgid ""
-"Here, you can select a style for your desktop. Pardus provides some eye "
-"candy styles for you."
+"Here, you can select a <b>style </b>for your desktop. <b>Pardus</b> provides "
+"some eye candy styles for you."
 msgstr ""
 "Pardus size güzel görünümlü duvar kâğıtları sunar. Masaüstünüz için bir "
 "duvar kâğıdı seçebilirsiniz. "
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 27
 #: rc.cpp:23
-#, no-c-format
+#, fuzzy, no-c-format
 msgid ""
-"Here, you can select a wallpaper for your desktop background. Pardus "
-"provides eye candy wallpapers, you can select one of them, as you wish."
+"Here, you can select a <b>wallpaper</b> for your desktop background. "
+"<b>Pardus</b> provides eye candy wallpapers, you can select one of them, as "
+"you wish."
 msgstr ""
 "Pardus size güzel görünümlü duvar kâğıtları sunar. Masaüstünüz için bir "
 "duvar kâğıdı seçebilirsiniz. "
-
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 133
-#: rc.cpp:72
-#, no-c-format
-msgid ""
-"Here, you can select default behaviour of package-manager, software manager "
-"for Pardus."
-msgstr ""
-"Package-manager yazılımının öntanımlı davranışlarını buradan belirleyebilirsiniz."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 27
 #: rc.cpp:39
@@ -138,23 +156,6 @@ msgstr "Ağ Ayarı"
 #, no-c-format
 msgid "Package Manager"
 msgstr "Paket Yöneticisi"
-
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
-#: rc.cpp:16
-#, no-c-format
-msgid ""
-"Pardus is a GNU/Linux distribution, targeting at computer literate users' "
-"basic desktop needs; with acquiring the strong ideas, architecture and code "
-"of other distributions; with a custom configuration framework which has the "
-"ability to evolve into an autonomous system; for simplifying the "
-"installation and usage of the computers."
-msgstr ""
-"Pardus GNU/Linux dağıtımı, bilişim okur-yazarlığına sahip bilgisayar "
-"kullanıcılarının temel masaüstü ihtiyaçlarını hedefleyerek; mevcut Linux "
-"dağıtımlarının üstün taraflarını kavram, mimari ya da kod olarak kullanan; "
-"otonom sisteme evrilebilecek bir yapılandırma çerçevesi ve araçları ile "
-"kurulum, yapılandırma ve kullanım kolaylığı sağlamak üzere geliştirilen bir "
-"GNU/Linux dağıtımıdır. "
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 85
 #: rc.cpp:45
@@ -231,3 +232,10 @@ msgstr "Duvar Kâğıdı Ayarı"
 #, no-c-format
 msgid "Welcome"
 msgstr "Hoş Geldiniz"
+
+#~ msgid ""
+#~ "Here, you can select default behaviour of package-manager, software "
+#~ "manager for Pardus."
+#~ msgstr ""
+#~ "Package-manager yazılımının öntanımlı davranışlarını buradan "
+#~ "belirleyebilirsiniz."
